--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,45 @@
+.app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+  background-image: url("/images/img1.jpg");
+  border-radius: 30px;
+}
+.weather-app {
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+.git-link {
+  max-width: 600px;
+  margin: 30px auto;
+  margin-top: 0 auto;
+}
 .weather-icon {
-  display: inline-block;
-  height: 60px;
-  margin-top: unset;
-  vertical-align: top;
-  width: 60px;
+  margin-right: 10px;
+  height: 70px;
+  width: 70px;
+}
+.temperature {
+  color: #202124;
+  font-size: 64px;
+  line-height: 1px;
+  font-weight: 400px;
+}
+.font-color {
+  color: #ebdb00;
+}
+.units {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
+}
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+li {
+  list-style: none;
+  font-size: 16px;
+  font-weight: 100px;
 }
