--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,17 @@
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+li {
+  list-style: none;
+  font-size: 16px;
+  font-weight: 100px;
+}
+h1 {
+  color: #304de4;
+  text-align: left;
+  margin-bottom: 0px;
+}
 .app-wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -33,13 +47,4 @@
   position: relative;
   font-size: 16px;
   top: -34px;
-}
-ul {
-  margin: 0px;
-  padding: 0px;
-}
-li {
-  list-style: none;
-  font-size: 16px;
-  font-weight: 100px;
 }
