--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,9 @@ h1 {
   max-width: 600px;
   margin: 30px auto;
   background-image: url("/images/img1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-blend-mode: hue;
   border-radius: 30px;
 }
 .weather-app {
