--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,17 @@ li {
   font-size: 16px;
   font-weight: 100px;
 }
+li::first-letter {
+  text-transform: capitalize;
+}
 h1 {
+  display: inline;
+  color: #304de4;
+  text-align: left;
+  margin-bottom: 0px;
+}
+.country {
+  font-size: calc(1.375rem + 1.5vw);
   color: #304de4;
   text-align: left;
   margin-bottom: 0px;
