--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,22 @@ h1 {
   text-align: left;
   margin-bottom: 0px;
 }
+form {
+  display: inline;
+}
+.location {
+  font-size: 35px;
+  color: #146ebe;
+  margin: 0;
+  float: right;
+  top: 5;
+  position: relative;
+}
+.location:hover {
+  color: #061624;
+  transition: all 200ms ease-in-out;
+  cursor: pointer;
+}
 .country {
   font-size: calc(1.375rem + 1.5vw);
   color: #304de4;
