Testing to see if app background image can be changed during nightfall.

--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,7 @@ form {
   background-size: cover;
   background-blend-mode: hue;
   border-radius: 30px;
+  box-shadow: #dbd6f6;
 }
 .weather-app {
   padding: 20px;
