--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ form {
   background-size: cover;
   background-blend-mode: hue;
   border-radius: 30px;
-  box-shadow: #dbd6f6;
+  box-shadow: 10px 5px 5px #dbd6f6;
 }
 .weather-app {
   padding: 20px;
