--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,7 @@ form {
   background-size: cover;
   background-blend-mode: hue;
   border-radius: 2px;
-  box-shadow: 5px 5px 5px #dbd6f6;
+  box-shadow: 5px 5px 5px #2b2b2c;
 }
 .weather-app {
   padding: 20px;
@@ -54,6 +54,23 @@ form {
   border-radius: 5px;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
+
+.forecast-max-temp {
+  font-size: 17.5px;
+  text-align: center;
+}
+
+.forecast-min-temp {
+  font-size: 16px;
+  opacity: 0.5;
+  text-align: center;
+}
+
+.forecast-date {
+  font-size: 18px;
+  text-align: center;
+}
+
 .git-link {
   max-width: 600px;
   margin: 30px auto;
